# react-cpp-vehicle-sim

./: .gitignore  README.md  emcc_start.ps1  package-lock.json
core_engine/: CMakeLists.txt  compile_project.ps1
core_engine/include/: Car.h  Engine.h  FuelTank.h  Speedometer.h  Tachometer.h  Transmission.h  Wheel.h
core_engine/src/: Car.cpp  Engine.cpp  FuelTank.cpp  Speedometer.cpp  Tachometer.cpp  Transmission.cpp  Wheel.cpp  main.cpp
core_engine/tests/: FuelTankTests.cpp  TransmissionTests.cpp
dashboard_ui/: package-lock.json  package.json
dashboard_ui/src/: App.css  App.jsx  main.jsx
dashboard_ui/src/components/: FuelGauge.jsx  ListGroup.tsx  Speedometer.jsx
dashboard_ui/src/components/FuelSystem/: FuelGauge.css  FuelGaugeDisplay.jsx  FuelSystem.jsx
dashboard_ui/src/components/Tachometer/: Tachometer.css  TachometerDisplay.jsx
dashboard_ui/src/hooks/: useFuelSystem.js
dashboard_ui/src/wasm/: fuel_tank.js  fuel_tank.wasm  fuel_test.js
